--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,15 +1,25 @@
 @font-face {
-  font-family: 'Space Grotesk';
-  src: url('../fonts/SpaceGrotesk-Regular.woff2') format('woff2');
-  font-weight: 400;
+  font-family: 'Cormorant';
+  src:  local('Cormorant-Bold'), local('Cormorant') 
+      url('./fonts/cormorant-v11-latin_cyrillic-700.woff') format('woff2')
+      url('./fonts/cormorant-v11-latin_cyrillic-700.woff') format('woff');
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: '';
-  src: url('') format('woff2');
-  font-weight: 500;
+  font-family: 'Arial';
+  src: url('Arial-BoldItalicMT.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Arial';
+  src: url('ArialMT.woff2') format('woff2');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
