--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,9 +1,9 @@
 body {
-  @include fluid-text(18, 16);
+  @include fluid-text(24, 12);
   
   font-family: var(--font-family-base);
   font-weight: 400;
-  line-height: 1.28;
+  letter-spacing: 0.04em;
   color: var(--color-dark);
   background-color: var(--color-light);
 }
@@ -22,24 +22,13 @@ a {
 }
 
 h1,
-h2,
-h3,
-h4 {
-  font-weight: 500;
-}
+h2
+{
+  @include fluid-text(70, 28);
 
-h1 {
-  @include fluid-text(60, 43);
-}
-
-h2 {
-  @include fluid-text(40, 36);
-}
-
-h3 {
-  @include fluid-text(30, 26);
-}
-
-h4 {
-  @include fluid-text(20, 18);
+  font-family: var(--font-family-alt);
+  font-weight: 700;
+  line-height: 100%;
+  color: var(--color-light);
+  letter-spacing: 0.01em;
 }
