--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,11 +1,17 @@
-$desktop-above: 1281px;
-$desktop: 1280.98px;
+$desktop-above: 1441px;
+$desktop: 1440.98px;
 
-$tablet-above: 1024px;
-$tablet: 1023.98px;
+$desktop-s-above: 1201px;
+$desktop-s: 1200.98px;
 
-$mobile-above: 768px;
-$mobile: 767.98px;
+$tablet-above: 1001px;
+$tablet: 1000.98px;
+
+$mobile-above: 769px;
+$mobile: 768.98px;
+
+$mobile-s-above: 581px;
+$mobile-s: 580.98px;
 
 @mixin desktop-above {
   @media (min-width: $desktop-above) {
@@ -15,6 +21,18 @@ $mobile: 767.98px;
 
 @mixin desktop {
   @media (max-width: $desktop) {
+    @content;
+  }
+}
+
+@mixin desktop-s-above {
+  @media (min-width: $desktop-s-above) {
+    @content;
+  }
+}
+
+@mixin desktop-s {
+  @media (max-width: $desktop-s) {
     @content;
   }
 }
@@ -39,6 +57,18 @@ $mobile: 767.98px;
 
 @mixin mobile {
   @media (max-width: $mobile) {
+    @content;
+  }
+}
+
+@mixin mobile-s-above {
+  @media (min-width: $mobile-s-above) {
+    @content;
+  }
+}
+
+@mixin mobile-s {
+  @media (max-width: $mobile-s) {
     @content;
   }
 }
