--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -76,6 +76,8 @@ body {
 svg *[fill] { fill: currentColor }
 svg *[stroke] { stroke: currentColor }
 
+svg > #logo [fill] {fill: revert-layer}
+
 svg * {
   transition-property: fill, stroke;
 }
