--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -18,13 +18,13 @@
 }
 
 .hidden-mobile {
-  @include mobile {
+  @include tablet {
     display: none !important;
   }
 }
 
 .visible-mobile {
-  @include mobile-above {
+  @include tablet-above {
     display: none !important;
   }
 }
