rewrite the code, deleted the fluid-text, as it is not suitable for this project. redesigned buttons, logos and media queries

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,4 +31,16 @@
   --button-heigth: 51px;
 
   --transition-duration: 0.2s; 
+  
+  @include tablet {
+    --container-padding-x: 42px;
+  }
+
+  @include mobile-s {
+    --container-padding-x: 39px;
+  }
+
+  @include mobile-s {
+    --container-padding-x: 10px;
+  }
 }
