--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,6 +1,5 @@
 body {
-  @include fluid-text(24, 12);
-  
+  font-size: 18px;
   font-family: var(--font-family-base);
   font-weight: 400;
   letter-spacing: 0.04em;
@@ -24,11 +23,26 @@ a {
 h1,
 h2
 {
-  @include fluid-text(70, 28);
-
+  font-size: 70px;
   font-family: var(--font-family-alt);
   font-weight: 700;
   line-height: 100%;
   color: var(--color-light);
   letter-spacing: 0.01em;
+
+  @include desktop-s {
+    font-size: 60px;
+  }
+
+  @include tablet {
+    font-size: 50px;
+  }
+
+  @include mobile {
+    font-size: 40px;
+  }
+  
+  @include mobile-s {
+    font-size: 28px;
+  }
 }
