--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,15 +6,14 @@
   }
 
   @include mobile-s {
-    padding-top: 16px;
-    padding-bottom: 20px;
+    padding-block: 14px;
   }
 
-  // .header__innerGrid
-  &__innerGrid {
+  // .header__inner-Grid
+  &__inner-Grid {
     grid-template-columns: 1fr 3fr 1fr;
     align-items: center;
-    column-gap: 0;
+    gap: 0;
 
     @include mobile {
       grid-template-columns: repeat(3, 1fr);
@@ -22,7 +21,6 @@
     }
 
     @include mobile-s {
-      grid-template-columns: repeat(3, 1fr);
       row-gap: 15px;
     }
   }
@@ -32,7 +30,7 @@
   &__logo {
     justify-self: start;
 
-    @include tablet {
+    @include mobile {
       grid-row: 1;
       grid-column: 2;
       justify-self: center;
@@ -42,7 +40,7 @@
   // .header__burger
 
   &__burger {
-    @include tablet {
+    @include mobile {
       grid-row: 1;
       grid-column: 1;
       justify-self: start;
@@ -55,7 +53,7 @@
     justify-self: center;
     align-self: center;
 
-    @include tablet {
+    @include mobile {
       grid-row: 2;
       grid-column: 1 / 4;
     }
@@ -68,12 +66,11 @@
 
     padding: 14px 36px;
 
-    
-    @include desktop {
+    @include tablet {
       padding: 12px 30px;
     }
 
-    @include tablet {
+    @include mobile {
       padding: 8px 20px;
       grid-row: 1;
       grid-column: 3;
