--- a/src/styles/blocks/_logo.scss
+++ b/src/styles/blocks/_logo.scss
@@ -1,15 +1,15 @@
 .logo {
-  max-width: 164px;
+  width: 164px;
   height: 76px;
   color: var(--color-green-2);
 
   @include desktop-s {
-    max-width: 115px;
+    width: 115px;
     height: 55px;
   }
 
   @include mobile-s {
-    max-width: 73px;
+    width: 73px;
     height: 35px;
   }
 }
