--- a/src/styles/blocks/_navigation.scss
+++ b/src/styles/blocks/_navigation.scss
@@ -40,20 +40,27 @@
   // .navigation__link
 
   &__link {
-    @include fluid-text(18, 12);
-
     position: relative;
-    font-family: var(--font-family);
+    font-size: 18px;
     line-height: 1.3;
     letter-spacing: 0.04em;
     color: var(--color-dark);
-    
+
     @include tablet {
+      font-size: 16px;
+    }
+    
+    @include mobile {
       display: block;
       border: 1px solid var(--color-button-trigger);
       border-radius: var(--border-radius-large-big);
+      font-size: 14px;
       text-align: center;
       padding: 7px 10px;
+    }
+
+    @include mobile-s {
+      font-size: 12px;
     }
 
     &::before {
@@ -69,7 +76,7 @@
       transform: scaleX(0);
       transition: transform .3s ease-in-out;
 
-      @include tablet {
+      @include mobile {
         content: none;
       }
     }
