Update styles for hero and features sections

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,11 @@
 
   --font-family-base: 'Arial', sans-serif;
   --font-family-alt: 'Cormorant', serif;
+
+  --url-features-one: url('../img/icon/tree.svg');
+  --url-features-two: url('../img/icon/christmas-decorations.svg');
+  --url-features-three: url('../img/icon/flowers.svg');
+  --url-features-four: url('../img/icon/delivery-truck.svg');
   
   --container-width: 1290px;
   --container-padding-x: 20px;
