--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -69,14 +69,19 @@
     }
 
     @include tablet {
-      margin-block: 50px;
+      margin-block: 48px;
       max-width: 445px;
     }
 
     @include mobile {
-      margin-block: 30px;
+      margin-block: 28px;
       max-width: 367px;
       margin-left: 50px;
+    }
+
+    @include mobile-s {
+      margin: 0;
+      margin-block: 20px;
     }
   }
 
@@ -88,11 +93,16 @@
     margin-bottom: 50px;
 
     @include desktop-s {
-      margin-bottom: 18px;
+      margin-bottom: 25px;
     }
 
     @include mobile {
+      margin-bottom: 20px;
       font-size: 40px;
+    }
+
+    @include mobile-s {
+      margin-bottom: 16px;
     }
 
 
@@ -117,6 +127,7 @@
     }
 
     @include mobile-s {
+      margin-bottom: 16px;
       font-size: 14px;
     }
   }
