Added a new color variable `--color-green-4` and used it in the button component. Made the button component transparent by default and added a new modifier class `--transparent` to make it have a background color. Added three new blocks: `tree`, `tree-card`, and `features`.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@
   --color-green-1: #00654e;
   --color-green-2: #006e55;
   --color-green-3: #005844;
+  --color-green-4: #006f55;
 
   --main-bg-color: #005844;
   --second-bg-color: #c0b487;
