--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -26,7 +26,7 @@ h2
   font-size: 70px;
   font-family: var(--font-family-alt);
   font-weight: 700;
-  line-height: 100%;
+  line-height: 1;
   color: var(--color-light);
   letter-spacing: 0.01em;
 
