--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -7,6 +7,7 @@
   font-weight: 700;
   font-size: 18px;
   color: var(--color-light);
+  background-color: var(--color-button);
   border: 1px solid var(--color-button);
   border-radius: var(--border-radius-large);
   cursor: pointer;
@@ -14,6 +15,10 @@
   transition-property: background-color, box-shadow, outline;
   transition-duration: var(--transition-duration);
 
+
+  &-transparent {
+    background-color: transparent;
+  }
 
   @include tablet {
     font-size: 16px;
