--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,5 +16,7 @@
   'blocks/navigation',
   'blocks/header',
   'blocks/hero',
-  'blocks/features'
+  'blocks/features',
+  'blocks/tree',
+  'blocks/tree-card'
 ;
