Update payment section layout and add new payment options.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,5 +18,7 @@
   'blocks/hero',
   'blocks/features',
   'blocks/tree',
-  'blocks/tree-card'
+  'blocks/tree-card',
+  'blocks/pay',
+  'blocks/option-pay'
 ;
