Updated HTML and SCSS files for the Christmas tree website. - Changed the navigation links to use anchor tags with IDs. - Added CSS styles for the burger menu. - Updated the header class name from `header__inner-Grid` to `header__inner-grid`. - Added CSS styles for the tree cards.

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -9,8 +9,8 @@
     padding-block: 14px;
   }
 
-  // .header__inner-Grid
-  &__inner-Grid {
+  // .header__inner-grid
+  &__inner-grid {
     grid-template-columns: 1fr 3fr 1fr;
     align-items: center;
     gap: 0;
