--- a/src/styles/blocks/_tree-card.scss
+++ b/src/styles/blocks/_tree-card.scss
@@ -18,7 +18,7 @@
     --treeCardOffsetY: 30px;
   }
 
-  &_odd {
+  &-odd {
     @include mobile-s-above {
       flex-direction: row-reverse;
     }
