Add order and consultation modals, update navigation links

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,7 @@
   --border-radius-small: 6px;
   --border-radius-large: 10px;
   --border-radius-large-big: 20px;
+  --border-radius-modal: 14px;
 
   --shadow: 4px 7px 20px 0 var(--color-dark);
 
