--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,6 +11,8 @@
 @import 
   'blocks/grid',
   'blocks/button',
+  'blocks/overlay',
+  'blocks/modal',
   'blocks/burger',
   'blocks/logo',
   'blocks/navigation',
